[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devtools"
version = "0.1.0"
description = "A Python utility library for development tasks"
readme = "README.md"
authors = [{name = "Robin Magnussen", email = "your.email@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "colorama>=0.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/validvar/dev_tooling"
Repository = "https://github.com/validvar/dev_tooling"
Issues = "https://github.com/validvar/dev_tooling/issues"

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
